tests/ui/parser/issues/issue-70583-block-is-empty-1.stderr
error: unexpected closing delimiter: `}`
  --> $DIR/issue-70583-block-is-empty-1.rs:20:1
   |
LL | fn struct_generic(x: Vec<i32>) {
   |                                - this opening brace...
...
LL |     }
   |     - ...matches this closing brace
LL | }
   | ^ unexpected closing delimiter

error: aborting due to previous error

